app structure was created

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~bootstrap-4-grid/css/grid.min.css";
+
+body {
+    background: #f3f3f3;
+}
