sidebar html/css template is ready

--- a/src/app/public/sidebar/sidebar.component.html
+++ b/src/app/public/sidebar/sidebar.component.html
@@ -1,3 +1,87 @@
-<p>
-  sidebar works!
-</p>
+<aside>
+    <header>
+        <div class="row">
+            <div class="col-2">
+                <span>Users</span>
+            </div>
+            <div class="col-10 text-right">
+                <mat-icon class="mr-4">filter_list</mat-icon>
+                <mat-icon>search</mat-icon>
+            </div>
+        </div>
+    </header>
+    <div>
+        <mat-list>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 class="mb-1" mat-line>Name</h4>
+                <p class="mb-1" mat-line> Username </p>
+                <p mat-line> Email </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>
+                <mat-icon mat-list-icon>folder</mat-icon>
+                <h4 mat-line>Name</h4>
+                <p mat-line> Username </p>
+                <p mat-line> EMail </p>
+            </mat-list-item>
+            <mat-divider></mat-divider>
+        </mat-list>
+    </div>
+</aside>
