--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~bootstrap-4-grid/css/grid.min.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body, html {
+    height: 100%;
+}
 
 body {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
     background: #f3f3f3;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.text-center {
+    text-align: center;
 }
