--- a/src/app/public/dashboard/dashboard.component.html
+++ b/src/app/public/dashboard/dashboard.component.html
@@ -1,7 +1,10 @@
 <div class="container">
     <div class="row">
-        <div class="col-12">
+        <div class="col-4">
             <app-sidebar></app-sidebar>
+        </div>
+        <div class="col-8">
+
         </div>
     </div>
 </div>
