right side app is ready

--- a/src/app/public/dashboard/dashboard.component.html
+++ b/src/app/public/dashboard/dashboard.component.html
@@ -4,7 +4,8 @@
             <app-sidebar></app-sidebar>
         </div>
         <div class="col-8">
-
+            <app-albums></app-albums>
+            <app-photos></app-photos>
         </div>
     </div>
 </div>
