--- a/src/app/public/sidebar/sidebar.component.html
+++ b/src/app/public/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
-<aside>
+<aside class="shadow-element">
     <header>
         <div class="row">
-            <div class="col-2">
-                <span>Users</span>
+            <div class="col-4">
+                <span class="block-header">Users</span>
             </div>
-            <div class="col-10 text-right">
+            <div class="col-8 text-right">
                 <mat-icon class="mr-4">filter_list</mat-icon>
                 <mat-icon>search</mat-icon>
             </div>
