--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,13 @@ body {
 .text-center {
     text-align: center;
 }
+
+.block-header {
+    font-size: 20px;
+    font-weight: 500;
+    color: #333;
+}
+
+.shadow-element {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
+}
