made all app panels

--- a/src/app/public/albums/albums.component.html
+++ b/src/app/public/albums/albums.component.html
@@ -7,7 +7,7 @@
             <mat-checkbox>Check me!</mat-checkbox>
         </div>
     </div>
-    <div class="row">
+    <div class="row h-100 align-content-center">
         <div class="col-12 text-center">
             <p>Select a user first</p>
         </div>
