add albums list to component

--- a/src/app/public/albums/albums.component.css
+++ b/src/app/public/albums/albums.component.css
@@ -4,3 +4,11 @@ section#albums {
     height: 250px;
     overflow-y: scroll;
 }
+
+section#albums .mat-checkbox-layout {
+    white-space: normal;
+}
+
+section#albums span.mat-checkbox-label {
+    font-size: 13px;
+}
