--- a/src/app/public/albums/albums.component.html
+++ b/src/app/public/albums/albums.component.html
@@ -1,15 +1,20 @@
 <section id="albums" class="shadow-element mb-4">
-    <div class="row ">
+    <div class="row">
         <div class="col-6">
             <span class="block-header">Albums</span>
         </div>
         <div class="col-6 text-right">
-            <mat-checkbox>Check me!</mat-checkbox>
+            <mat-checkbox>Select all</mat-checkbox>
         </div>
     </div>
-    <div class="row h-100 align-content-center">
+    <div *ngIf="!albums.length" class="row h-100 align-content-center">
         <div class="col-12 text-center">
             <p>Select a user first</p>
+        </div>
+    </div>
+    <div *ngIf="albums.length" class="row mt-4">
+        <div class="col-3 mb-2" *ngFor="let album of albums">
+            <mat-checkbox (change)="getAlbumPhotos(album.id)">{{album.title}}</mat-checkbox>
         </div>
     </div>
 </section>
