--- a/src/app/public/photos/photos.component.css
+++ b/src/app/public/photos/photos.component.css
@@ -1,5 +1,6 @@
 section#photos {
     padding: 16px 24px;
     background: #fff;
-    height: calc(100% - 250px - 1.5rem);
+    height: calc(100% - 250px - 3rem);
+    overflow-y: scroll;
 }
