search user by query is done

--- a/src/app/public/albums/albums.component.css
+++ b/src/app/public/albums/albums.component.css
@@ -11,6 +11,10 @@ section#albums .mat-checkbox-layout {
 
 section#albums span.mat-checkbox-label {
     font-size: 13px;
+    white-space: nowrap;
+    max-width: 130px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 section#albums button {
