--- a/src/app/public/albums/albums.component.html
+++ b/src/app/public/albums/albums.component.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div *ngIf="albums.length" class="row mt-4">
-        <div class="col-3 mb-2" *ngFor="let album of albums">
+        <div class="col-3" *ngFor="let album of albums">
             <mat-checkbox (change)="getAlbumPhotos(album.id)">{{album.title}}</mat-checkbox>
         </div>
     </div>
