--- a/src/app/public/albums/albums.component.scss
+++ b/src/app/public/albums/albums.component.scss
@@ -1,7 +1,7 @@
 section#albums {
     padding: 16px 24px;
     background: #fff;
-    height: 250px;
+    height: 40vh;
     overflow-y: scroll;
 }
 
@@ -19,7 +19,7 @@ section#albums span.mat-checkbox-label {
 
 section#albums button {
     position: absolute;
-    top: 220px;
+    top: 37vh;
     right: 50px;
 }
 
