--- a/src/app/public/photos/photos.component.scss
+++ b/src/app/public/photos/photos.component.scss
@@ -1,6 +1,6 @@
 section#photos {
-    padding: 16px 24px;
-    background: #fff;
-    height: calc(100% - 250px - 3rem);
-    overflow-y: scroll;
+  padding: 16px 24px;
+  background: #fff;
+  height: calc(100% - 40vh - 3rem);
+  overflow-y: scroll;
 }
