--- a/src/app/public/albums/albums.component.scss
+++ b/src/app/public/albums/albums.component.scss
@@ -1,28 +1,31 @@
+@import "src/assets/scss/vars";
+@import "src/assets/scss/mixins";
+
 section#albums {
-    padding: 16px 24px;
-    background: #fff;
-    height: 40vh;
-    overflow-y: scroll;
+  padding: $baseSize * 4 $baseSize * 6;
+  background: $white;
+  height: 40vh;
+  overflow-y: scroll;
 }
 
 section#albums .mat-checkbox-layout {
-    white-space: normal;
+  white-space: normal;
 }
 
 section#albums span.mat-checkbox-label {
-    font-size: 13px;
-    white-space: nowrap;
-    max-width: 130px;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  font-size: 13px;
+  white-space: nowrap;
+  max-width: 130px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 section#albums button {
-    position: absolute;
-    top: 37vh;
-    right: 50px;
+  position: absolute;
+  top: 37vh;
+  right: 50px;
 }
 
 section#albums button.mat-fab.mat-accent {
-    background-color: #26a9e0;
+  background-color: $app-main-blue;
 }
