--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -3,6 +3,7 @@ $body-background: #f3f3f3;
 $header-text-color: #333;
 $app-main-blue: #26a9e0;
 $white: #fff;
+$baseSize: 4px;
 
 $left: 'left';
 $top: 'top';
