--- a/src/app/public/sidebar/sidebar.component.html
+++ b/src/app/public/sidebar/sidebar.component.html
@@ -1,35 +1,34 @@
 <aside class="shadow-element">
-    <header>
-        <div class="row" *ngIf="!showSearch">
-            <div class="col-4">
-                <span class="block-header">Users</span>
-            </div>
-            <div class="col-8 text-right">
-                <mat-icon class="mr-4">filter_list</mat-icon>
-                <mat-icon (click)="showSearchField()" class="clickable">search</mat-icon>
-            </div>
-        </div>
-        <div class="row" *ngIf="showSearch">
-            <div class="col-12">
-                <div class="searchWrapper d-flex align-items-center">
-                    <mat-icon class="clickable" (click)="closeSearchField()">arrow_back</mat-icon>
-                    <input #userSearch type="text" [(ngModel)]="user" (input)="searchByQuery()">
-                    <mat-icon class="clickable" (click)="clearSearch()">close</mat-icon>
-                </div>
-            </div>
-        </div>
-    </header>
-    <div>
-        <mat-list>
-            <ng-container *ngFor="let user of users">
-                <mat-list-item class="hoverable" (click)="showUsersAlbums(user.id)">
-                    <mat-icon mat-list-icon>account_circle</mat-icon>
-                    <h4 class="mb-1" mat-line>{{user.name}}</h4>
-                    <p class="mb-1" mat-line>{{user.username}}</p>
-                    <p mat-line>{{user.email}}</p>
-                </mat-list-item>
-                <mat-divider></mat-divider>
-            </ng-container>
-        </mat-list>
+  <header>
+    <div class="row" *ngIf="!showSearch">
+      <div class="col-4">
+        <span class="block-header">Users</span>
+      </div>
+      <div class="col-8 text-right">
+        <mat-icon (click)="showSearchField()" class="clickable">filter_list</mat-icon>
+      </div>
     </div>
+    <div class="row" *ngIf="showSearch">
+      <div class="col-12">
+        <div class="searchWrapper d-flex align-items-center">
+          <mat-icon class="clickable" (click)="closeSearchField()">arrow_back</mat-icon>
+          <input type="text" [(ngModel)]="user" (input)="searchByQuery()" placeholder="Search by name">
+          <mat-icon class="clickable" *ngIf="user" (click)="clearSearch()">close</mat-icon>
+        </div>
+      </div>
+    </div>
+  </header>
+  <div>
+    <mat-list>
+      <ng-container *ngFor="let user of users">
+        <mat-list-item class="hoverable" (click)="showUsersAlbums(user.id)">
+          <mat-icon mat-list-icon>account_circle</mat-icon>
+          <h4 class="mb-1" mat-line>{{user.name}}</h4>
+          <p class="mb-1" mat-line>{{user.username}}</p>
+          <p mat-line>{{user.email}}</p>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+      </ng-container>
+    </mat-list>
+  </div>
 </aside>
