--- a/src/app/public/albums/albums.component.html
+++ b/src/app/public/albums/albums.component.html
@@ -1,4 +1,4 @@
-<section id="albums" class="shadow-element mb-5">
+<section id="albums">
   <div class="row">
     <div class="col-6">
       <span class="block-header">Albums</span>
