--- a/src/app/public/photos/photos.component.scss
+++ b/src/app/public/photos/photos.component.scss
@@ -1,9 +1,11 @@
 @import "src/assets/scss/vars";
 @import "src/assets/scss/mixins";
 
-section#photos {
-  padding: $baseSize * 4 $baseSize * 6;
-  background: $white;
-  height: calc(100% - 40vh - 3rem);
-  overflow-y: scroll;
+:host {
+
+  #photos {
+    padding: $baseSize * 4 $baseSize * 6;
+    display: flex;
+    flex-direction: column;
+  }
 }
