--- a/src/app/public/albums/albums.component.scss
+++ b/src/app/public/albums/albums.component.scss
@@ -5,6 +5,7 @@
   padding: $baseSize * 4 $baseSize * 6;
   display: flex;
   flex-direction: column;
+  height: 100%;
 
   .mat-checkbox {
     font-size: 13px;
