add some BEM styles

--- a/src/app/public/albums/albums.component.html
+++ b/src/app/public/albums/albums.component.html
@@ -1,7 +1,7 @@
-<section id="albums">
+<section class="albums">
   <div class="row">
     <div class="col-6">
-      <span class="block-header">Albums</span>
+      <span class="albums__block-header">Albums</span>
     </div>
     <div class="col-6 text-right" *ngIf="albums.length">
       <mat-checkbox (change)="selectAll($event)">Select all</mat-checkbox>
