--- a/src/app/public/dashboard/dashboard.component.html
+++ b/src/app/public/dashboard/dashboard.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="col-8">
       <div class="userInfo">
-        <albums [albums]="albums" class="mb-5 albums shadow-element" (getPhotos)="getPhotosList($event)"></albums>
-        <photos [photos]="photos" class="photos shadow-element"></photos>
+        <albums [albums]="albums" class="mb-5 shadow-element" (getPhotos)="getPhotosList($event)"></albums>
+        <photos [photos]="photos" class="shadow-element"></photos>
       </div>
     </div>
   </div>
