--- a/src/app/public/photos/photos.component.html
+++ b/src/app/public/photos/photos.component.html
@@ -1,7 +1,7 @@
-<section id="photos">
+<section class="photos">
   <div class="row">
     <div class="col-12">
-      <span class="block-header">{{photos.length}} Photos</span>
+      <span class="photos__block-header">{{photos.length}} Photos</span>
     </div>
   </div>
   <div *ngIf="!photos.length" class="row h-100 align-content-center">
