--- a/src/app/public/sidebar/sidebar.component.html
+++ b/src/app/public/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <aside class="shadow-element">
-  <header>
+  <header class="header">
     <div class="row" *ngIf="!showSearch">
       <div class="col-4">
-        <span class="block-header">Users</span>
+        <span class="header__block-header">Users</span>
       </div>
       <div class="col-8 text-right">
         <mat-icon (click)="showSearchField()" class="clickable">filter_list</mat-icon>
